feat(user-auth): implement registration flow, fix security, JPA, and data consistency issues
- Allowed public access to register/auth endpoints
- Normalized phone number format (E.164)
- Fixed role column schema for scalability
- Resolved auditing date type mismatch
- Implemented multipart JSON + file handling
- Fixed cascade and duplicate insert issues
- Replaced immutable collections with mutable lists
- Corrected orphanRemoval handling for relationships
- Improved authentication and registration flow
- Refactored entity relationships for scalability